@@ -113,6 +113,9 @@ checkPrep <- function(mydata, Names, type, remove.calm = TRUE) {
         }
     }
 
+    ## set panel strip to white
+    suppressWarnings(trellis.par.set(list(strip.background = list(col = "white"))))
+
     ## return data frame
     mydata
 }
